{{$NEXT}}
  - Rendering a redirect will now set the response status to 302 if any non-300 status was set

0.012     2021-05-02 23:28:28 EDT
  - Remove set_response_fixed_length
  - render now always sets a Content-Length and can only be called once
  - Add render_chunk method which can be used instead of render for chunked content
  - set_nph now sets a true value if called without a value
  - Gracefully handle premature exit before the cgi block
  - Exceptions no longer cause the response status to default to 500 unless the error handler doesn't render anything

0.011     2021-04-29 02:12:59 EDT
  - Rename set_response_content_type and set_response_content_disposition to set_response_type and set_response_disposition
  - Add set_response_fixed_length method

0.010     2021-04-28 23:14:59 EDT
  - Replace set_response_download method with set_response_content_disposition
  - Add reset_response_headers method

0.009     2021-04-28 03:03:52 EDT
  - query_param_names, body_param_names, cookie_names, and upload_names now return names in the original request order
  - Add set_response_download and set_response_body_buffer methods
  - Add file and handle render options

0.008     2021-04-27 21:11:22 EDT
  - Fix parsing of empty multipart/form-data forms and some other edge cases
  - Add response_status_code method

0.007     2021-04-27 02:00:33 EDT
  - Support reading request body parameters from multipart/form-data requests
  - Add uploads, upload_names, upload, and upload_array methods to support multipart/form-data file uploads
  - Add body_parts method to return raw multipart/form-data parts
  - Add set_request_body_buffer and set_multipart_form_charset methods

0.006     2021-04-25 14:48:30 EDT
  - Use Unicode::UTF8 for encoding output data if available
  - query_params, body_params, and cookies methods now return pairs instead of a hashref
  - Remove query_pairs and body_pairs methods
  - Add query_param_names, body_param_names, and cookie_names methods