@@ -25,7 +25,7 @@ CGI::Tiny - Common Gateway Interface, with no frills
         } elsif ($cgi->response_status_code == 400) {
           $cgi->render(json => {error => 'Bad request'});
         } else {
-          $cgi->set_response_status(500)->render(json => {error => 'Internal server error'});
+          $cgi->render(json => {error => 'Internal server error'});
         }
       }
     });
@@ -397,8 +397,11 @@ warned or logged.
 
 Exceptions may occur before or after response headers have been rendered, so
 error handlers may choose to render some response if L</"headers_rendered"> is
-false. L</"response_status_code"> may be set by some errors and can be
-inspected if headers have not been rendered yet.
+false.
+
+L</"response_status_code"> may be set to a specific error status by some errors
+if headers have not been rendered yet, and will default to 500 when this
+handler is called if it has not been set to a 400- or 500-level error status.
 
 If the error handler itself throws an exception, that error and the original
 error will be emitted as a warning. If no response has been rendered after the
