@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Rendering a redirect will now set the response status to 302 if any non-300 status was set
+  - Exceptions and failure to render now set a 500 response status unless any error status was set
 
 0.012     2021-05-02 23:28:28 EDT
   - Remove set_response_fixed_length
